<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountanin"
    tools:context="com.example.costa.frotiloop.Main2Activity_Calculadora">

    <!--<LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">-->
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/tituloCalcu"
        android:textColor="@android:color/background_light"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etProceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:cursorVisible="true"
        android:ellipsize="end"
        android:focusable="false"
        android:gravity="end"
        android:inputType=""
        android:singleLine="true"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />
    <!--</LinearLayout>-->
    <!--Agrando botones-->
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">-->
    <Button
        android:id="@+id/btnSiete"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/etProceso"
        android:layout_toLeftOf="@+id/btnCinco"
        android:layout_toStartOf="@+id/btnCinco"
        android:background="@color/gris"
        android:text="@string/siete"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />
    <!--</LinearLayout>-->

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/etProceso"
        android:layout_toEndOf="@+id/btnSiete"
        android:layout_toRightOf="@+id/btnSiete"
        android:background="@color/gris"
        android:text="@string/ocho"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/etProceso"
        android:layout_toEndOf="@+id/btnOcho"
        android:layout_toRightOf="@+id/btnOcho"
        android:background="@color/gris"
        android:text="@string/nueve"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/etProceso"
        android:layout_toEndOf="@+id/btnNueve"
        android:layout_toRightOf="@+id/btnNueve"
        android:background="@android:color/holo_green_light"
        android:text="@string/division"
        android:textSize="28sp" />
    <!--**Fila 2***-->
    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnSiete"
        android:layout_toLeftOf="@+id/tvTitulo"
        android:layout_toStartOf="@+id/tvTitulo"
        android:background="@color/gris"
        android:text="@string/cuatro"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />


    <Button
        android:id="@+id/btnCinco"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnOcho"
        android:layout_toEndOf="@+id/btnCuatro"
        android:layout_toRightOf="@+id/btnCuatro"
        android:background="@color/gris"
        android:text="@string/cinco"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnNueve"
        android:layout_toEndOf="@+id/btnCinco"
        android:layout_toRightOf="@+id/btnCinco"
        android:background="@color/gris"
        android:text="@string/seis"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnDiv"
        android:layout_toEndOf="@+id/btnSeis"
        android:layout_toRightOf="@+id/btnSeis"
        android:background="@android:color/holo_green_light"
        android:text="@string/multi"
        android:textSize="28sp" />
    <!--**Fila 3***-->

    <Button
        android:id="@+id/btnUno"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/btnCuatro"
        android:layout_alignStart="@+id/btnCuatro"
        android:layout_below="@+id/btnCuatro"
        android:background="@color/gris"
        android:text="@string/uno"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnCinco"
        android:layout_toEndOf="@+id/btnUno"
        android:layout_toRightOf="@+id/btnUno"
        android:background="@color/gris"
        android:text="@string/dos"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnSeis"
        android:layout_toEndOf="@+id/btnDos"
        android:layout_toRightOf="@+id/btnDos"
        android:background="@color/gris"
        android:text="@string/tres"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnMulti"
        android:layout_toEndOf="@+id/btnTres"
        android:layout_toRightOf="@+id/btnTres"
        android:background="@android:color/holo_green_light"
        android:text="@string/menos"
        android:textSize="28sp" />
    <!--****Fila 4-->

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/btnUno"
        android:layout_alignStart="@+id/btnUno"
        android:layout_below="@+id/btnUno"
        android:background="@color/gris"
        android:text="@string/punto"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnDos"
        android:layout_toEndOf="@+id/btnPunto"
        android:layout_toRightOf="@+id/btnPunto"
        android:background="@color/gris"
        android:text="@string/cero"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnTres"
        android:layout_toEndOf="@+id/btnCero"
        android:layout_toRightOf="@+id/btnCero"
        android:background="@color/rojo"
        android:onClick="metodoIgual"
        android:text="@string/igual"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnResta"
        android:layout_toEndOf="@+id/btnIgual"
        android:layout_toRightOf="@+id/btnIgual"
        android:background="@android:color/holo_green_light"
        android:text="@string/mas"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_below="@+id/btnIgual"
        android:layout_toEndOf="@+id/btnCero"
        android:layout_toRightOf="@+id/btnCero"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/limpiar"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/btnPunto"
        android:layout_alignStart="@+id/btnPunto"
        android:layout_below="@+id/btnPunto"
        android:background="@android:color/holo_orange_dark"
        android:onClick="Salir"
        android:text="@string/Salir"
        android:textSize="28sp" />

</RelativeLayout>
