<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_menu"
        android:icon="@drawable/a_menu1"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/item_fallos"
                android:title="@string/fallos"
                android:icon="@drawable/a_fallos"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_meses"
                android:title="@string/meses"
                android:icon="@drawable/a_calendar"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/item_salir"
                android:title="@string/Salir"
                android:icon="@drawable/a_salir"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>