<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nubes"
    tools:context="com.example.costa.frotiloop.Main2Activity_Admin">

    <TextView
        android:id="@+id/textView_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="39dp"
        android:text="@string/Bienvenida"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="220dp"
        android:layout_height="65dp"
        android:layout_below="@+id/textView_admin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:background="#d32f2f"
        android:onClick="Modificar"
        android:text="@string/boton_modificar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="220dp"
        android:layout_height="67dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:background="#d32f2f"
        android:onClick="Eliminar"
        android:text="@string/boton_eliminar"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/radio_edit"
        android:onClick="Salir"
        android:text="@string/boton_salir"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />
</RelativeLayout>
